[package]
name = "rust-jav"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "A tool to process jav files"
repository = "https://github.com/hqwuzhaoyi/rust-jav"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.18.0"
regex = "1"
clap = { version = "4.4.7", features = ["derive"] }
log = "0.4"
env_logger = "0.9"
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"
async-recursion = "1.0.5"
indicatif = {version = "*", features = ["rayon"]}
dialoguer = "0.11.0"
